rust-debuginfo/tests/snapshots/generated_benchmarks@small-4.snap
---
source: rust-debuginfo/tests/mod.rs
expression: "debug_info.resolve_function(\"TestStruct1::method_1\").unwrap().unwrap()"
snapshot_kind: text
---
ResolvedFunction {
    name: "small::TestStruct1::method_1",
    address: "0x100007e3c",
    params: [
        Variable {
            name: "self",
            value: None,
            ty: Some(
                Type {
                    name: "&TestStruct1",
                },
            ),
        },
        Variable {
            name: "param",
            value: None,
            ty: Some(
                Type {
                    name: "i32",
                },
            ),
        },
    ],
}
