rust-debuginfo/tests/snapshots/generated_benchmarks@small-6.snap
---
source: rust-debuginfo/tests/mod.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x100007d20",
}
