rust-debuginfo/tests/snapshots/method_discovery@small.snap
---
source: rust-debuginfo/tests/mod.rs
expression: methods_by_type
snapshot_kind: text
---
{
    "&Global": [
        DiscoveredMethod {
            name: "alloc_impl",
            full_name: "alloc::alloc::Global::alloc_impl",
            signature: "fn(self: &Global, layout: Layout, zeroed: bool) -> ?",
            address: 4294975808,
            self_type: Owned,
            parameter_count: 3,
            callable: true,
        },
        DiscoveredMethod {
            name: "deallocate",
            full_name: "<alloc::alloc::Global as core::alloc::Allocator>::deallocate",
            signature: "fn(self: &Global, ptr: NonNull<u8>, layout: Layout) -> ?",
            address: 4294976648,
            self_type: Owned,
            parameter_count: 3,
            callable: true,
        },
    ],
    "&mut RawTableInner": [
        DiscoveredMethod {
            name: "drop_elements",
            full_name: "hashbrown::raw::RawTableInner::drop_elements",
            signature: "fn(self: &mut RawTableInner) -> ?",
            address: 4294977800,
            self_type: Owned,
            parameter_count: 1,
            callable: true,
        },
        DiscoveredMethod {
            name: "drop_elements",
            full_name: "hashbrown::raw::RawTableInner::drop_elements",
            signature: "fn(self: &mut RawTableInner) -> ?",
            address: 4294978172,
            self_type: Owned,
            parameter_count: 1,
            callable: true,
        },
        DiscoveredMethod {
            name: "drop_inner_table",
            full_name: "hashbrown::raw::RawTableInner::drop_inner_table",
            signature: "fn(self: &mut RawTableInner, alloc: &Global, table_layout: TableLayout) -> ?",
            address: 4294978544,
            self_type: Owned,
            parameter_count: 3,
            callable: true,
        },
        DiscoveredMethod {
            name: "drop_inner_table",
            full_name: "hashbrown::raw::RawTableInner::drop_inner_table",
            signature: "fn(self: &mut RawTableInner, alloc: &Global, table_layout: TableLayout) -> ?",
            address: 4294978732,
            self_type: Owned,
            parameter_count: 3,
            callable: true,
        },
    ],
    "&mut RawTable<(alloc::string::String, i32), alloc::alloc::Global>": [
        DiscoveredMethod {
            name: "drop",
            full_name: "<hashbrown::raw::RawTable<T,A> as core::ops::drop::Drop>::drop",
            signature: "fn(self: &mut RawTable<(alloc::string::String, i32), alloc::alloc::Global>) -> ?",
            address: 4294976792,
            self_type: Owned,
            parameter_count: 1,
            callable: true,
        },
    ],
    "&TestStruct7": [
        DiscoveredMethod {
            name: "method_2",
            full_name: "small::TestStruct7::method_2",
            signature: "fn(self: &TestStruct7, param: i32) -> ?",
            address: 4294982356,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
    ],
    "&Storage<core::cell::Cell<(u64, u64)>, !>": [
        DiscoveredMethod {
            name: "get_or_init",
            full_name: "std::sys::thread_local::native::lazy::Storage<T,D>::get_or_init",
            signature: "fn(self: &Storage<core::cell::Cell<(u64, u64)>, !>, i: Option<&mut Option<Cell<(u64, u64)>>>) -> ?",
            address: 4294969876,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
        DiscoveredMethod {
            name: "initialize",
            full_name: "std::sys::thread_local::native::lazy::Storage<T,D>::initialize",
            signature: "fn(self: &Storage<core::cell::Cell<(u64, u64)>, !>, i: Option<&mut Option<Cell<(u64, u64)>>>) -> ?",
            address: 4295200312,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
    ],
    "&TestStruct8": [
        DiscoveredMethod {
            name: "method_3",
            full_name: "small::TestStruct8::method_3",
            signature: "fn(self: &TestStruct8, param: i32) -> ?",
            address: 4294982640,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
    ],
    "&TestStruct1": [
        DiscoveredMethod {
            name: "method_1",
            full_name: "small::TestStruct1::method_1",
            signature: "fn(self: &TestStruct1, param: i32) -> ?",
            address: 4294980652,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
    ],
    "&TestStruct5": [
        DiscoveredMethod {
            name: "method_0",
            full_name: "small::TestStruct5::method_0",
            signature: "fn(self: &TestStruct5, param: i32) -> ?",
            address: 4294981788,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
    ],
    "&TestStruct3": [
        DiscoveredMethod {
            name: "method_3",
            full_name: "small::TestStruct3::method_3",
            signature: "fn(self: &TestStruct3, param: i32) -> ?",
            address: 4294981220,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
    ],
    "&TestStruct9": [
        DiscoveredMethod {
            name: "method_4",
            full_name: "small::TestStruct9::method_4",
            signature: "fn(self: &TestStruct9, param: i32) -> ?",
            address: 4294982924,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
    ],
    "&mut RawIterRange<(alloc::string::String, small::TestStruct0)>": [
        DiscoveredMethod {
            name: "next_impl",
            full_name: "hashbrown::raw::RawIterRange<T>::next_impl",
            signature: "fn(self: &mut RawIterRange<(alloc::string::String, small::TestStruct0)>) -> ?",
            address: 4294979784,
            self_type: Owned,
            parameter_count: 1,
            callable: true,
        },
    ],
    "&TestStruct4": [
        DiscoveredMethod {
            name: "method_4",
            full_name: "small::TestStruct4::method_4",
            signature: "fn(self: &TestStruct4, param: i32) -> ?",
            address: 4294981504,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
    ],
    "TableLayout": [
        DiscoveredMethod {
            name: "calculate_layout_for",
            full_name: "hashbrown::raw::TableLayout::calculate_layout_for",
            signature: "fn(self: TableLayout, buckets: u64) -> ?",
            address: 4294977272,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
    ],
    "&mut Range<i32>": [
        DiscoveredMethod {
            name: "next",
            full_name: "core::iter::range::<impl core::iter::traits::iterator::Iterator for core::ops::range::Range<A>>::next",
            signature: "fn(self: &mut Range<i32>) -> ?",
            address: 4294974772,
            self_type: Owned,
            parameter_count: 1,
            callable: true,
        },
        DiscoveredMethod {
            name: "spec_next",
            full_name: "<core::ops::range::Range<T> as core::iter::range::RangeIteratorImpl>::spec_next",
            signature: "fn(self: &mut Range<i32>) -> ?",
            address: 4294977128,
            self_type: Owned,
            parameter_count: 1,
            callable: true,
        },
    ],
    "&LocalKey<core::cell::Cell<(u64, u64)>>": [
        DiscoveredMethod {
            name: "try_with",
            full_name: "std::thread::local::LocalKey<T>::try_with",
            signature: "fn(self: &LocalKey<core::cell::Cell<(u64, u64)>>, f: {closure_env#0}) -> ?",
            address: 4294970328,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
        DiscoveredMethod {
            name: "with",
            full_name: "std::thread::local::LocalKey<T>::with",
            signature: "fn(self: &LocalKey<core::cell::Cell<(u64, u64)>>, f: {closure_env#0}) -> ?",
            address: 4294970248,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
    ],
    "&mut RawIterRange<(alloc::string::String, i32)>": [
        DiscoveredMethod {
            name: "next_impl",
            full_name: "hashbrown::raw::RawIterRange<T>::next_impl",
            signature: "fn(self: &mut RawIterRange<(alloc::string::String, i32)>) -> ?",
            address: 4294979304,
            self_type: Owned,
            parameter_count: 1,
            callable: true,
        },
    ],
    "&TestStruct0": [
        DiscoveredMethod {
            name: "method_0",
            full_name: "small::TestStruct0::method_0",
            signature: "fn(self: &TestStruct0, param: i32) -> ?",
            address: 4294980368,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
    ],
    "Range<i32>": [
        DiscoveredMethod {
            name: "into_iter",
            full_name: "<I as core::iter::traits::collect::IntoIterator>::into_iter",
            signature: "fn(self: Range<i32>) -> ?",
            address: 4294976628,
            self_type: Owned,
            parameter_count: 1,
            callable: true,
        },
    ],
    "Group": [
        DiscoveredMethod {
            name: "match_full",
            full_name: "hashbrown::control::group::neon::Group::match_full",
            signature: "fn(self: Group) -> ?",
            address: 4294980264,
            self_type: Owned,
            parameter_count: 1,
            callable: true,
        },
    ],
    "&mut RawTable<(alloc::string::String, small::TestStruct0), alloc::alloc::Global>": [
        DiscoveredMethod {
            name: "drop",
            full_name: "<hashbrown::raw::RawTable<T,A> as core::ops::drop::Drop>::drop",
            signature: "fn(self: &mut RawTable<(alloc::string::String, small::TestStruct0), alloc::alloc::Global>) -> ?",
            address: 4294976852,
            self_type: Owned,
            parameter_count: 1,
            callable: true,
        },
    ],
    "&TestStruct2": [
        DiscoveredMethod {
            name: "method_2",
            full_name: "small::TestStruct2::method_2",
            signature: "fn(self: &TestStruct2, param: i32) -> ?",
            address: 4294980936,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
    ],
    "&TestStruct6": [
        DiscoveredMethod {
            name: "method_1",
            full_name: "small::TestStruct6::method_1",
            signature: "fn(self: &TestStruct6, param: i32) -> ?",
            address: 4294982072,
            self_type: Owned,
            parameter_count: 2,
            callable: true,
        },
    ],
}
