rust-debuginfo/tests/snapshots/resolve_function@aarch64-unknown-linux-gnu.snap
---
source: tests/mod.rs
expression: "resolver.resolve_function(\"main\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedFunction {
        name: "simple_test::main",
        address: "0x660c",
        params: [],
    },
)
