rust-debuginfo/tests/snapshots/resolve_function@x86_64-unknown-linux-gnu.snap
---
source: rust-debuginfo/tests/mod.rs
expression: "resolver.resolve_function(\"main\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedFunction {
        name: "simple_test::main",
        address: "0x7d10",
        params: [],
    },
)
