rust-debuginfo/tests/snapshots/resolve_position@x86_64-apple-darwin-2.snap
---
source: tests/mod.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x100000b08",
}
